--- a/css/metodos.css
+++ b/css/metodos.css
@@ -43,7 +43,7 @@
 .principal_text {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 900;
-    font-size: 40px;
+    font-size: 35px;
     width: 80%;
 }
 
@@ -68,18 +68,22 @@
     line-height: 1.3;
 }
 
-.principal_text>p>span:hover {
+.behavior>p>span:hover {
     color: blueviolet;
     cursor: pointer;
 }
 
 @media(max-width: 1000px) {
     .metodo_content {
-        flex-direction: column;
-        align-items: center;
+        display: grid;
     }
     .metodo_text {
         align-items: center;
         width: 100vw;
+    }
+    .ilustration {
+        grid-row: 2;
+        margin: auto;
+        width: 50vw;
     }
 }
