--- a/css/cursos.css
+++ b/css/cursos.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    position: relative;
 }
 
 .cursos_box {
@@ -130,4 +131,16 @@
     .sub_text_curso {
         text-align: center;
     }
+}
+
+.modal {
+    position: absolute;
+    background-color: rgb(101, 71, 71);
+    width: 40vw;
+    height: 50vh;
+    z-index: 1;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
 }
