--- a/css/modal.css
+++ b/css/modal.css
@@ -52,12 +52,18 @@
     width: 15vw;
     height: 90%;
     margin-left: 2px;
+    cursor: pointer;
 }
 
 .card>.holdImg {
     height: 70%;
     color: black;
     border: 3px solid black;
+}
+
+.holdImg>img {
+    width: 100%;
+    height: 100%;
 }
 
 .card>.text_content {
