--- a/css/modal.css
+++ b/css/modal.css
@@ -2,7 +2,7 @@
     display: none;
     position: absolute;
     width: auto;
-    height: 50vh;
+    height: 55vh;
     z-index: 1;
     top: 55%;
     left: 50%;
@@ -42,6 +42,7 @@
 
 .cards_modal {
     display: flex;
+    justify-content: space-between;
     width: 100%;
     height: 90%;
 }
@@ -49,10 +50,11 @@
 .card {
     display: flex;
     flex-direction: column;
-    width: 15vw;
-    height: 90%;
-    margin-left: 2px;
+    width: 20vw;
+    height: 100%;
+    /* margin-left: 2px; */
     cursor: pointer;
+    margin: auto;
 }
 
 .card>.holdImg {
@@ -97,8 +99,31 @@
     padding: 10px 13px;
     text-decoration: none;
     text-shadow: 0px 1px 0px #2f6627;
+    transition: all 0.8s ease;
 }
 
 .link:hover {
-    background-color: blueviolet;
+    background-color: rgb(43, 86, 226);
+}
+
+@media(max-width: 1500px) {
+    .card {
+        width: 30vw;
+    }
+}
+
+@media(max-width: 1100px) {
+    .card {
+        width: 30vw;
+    }
+}
+
+@media(max-width: 700px) {
+    .modal {
+        width: 90%;
+    }
+    .card {
+        width: 80%;
+        margin: auto;
+    }
 }
