--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     padding: 0px;
     margin: 0px;
     color: white;
+    scroll-behavior: initial;
 }
 
 body {
@@ -28,6 +29,10 @@ header {
     height: 100%;
     font-size: 18pt;
     margin-left: 5vw;
+}
+
+.menu_nav>li>a {
+    text-decoration: none;
 }
 
 nav {
@@ -58,7 +63,7 @@ ul>li {
 }
 
 ul>li:hover {
-    background-color: white;
+    background-color: rgb(4, 140, 252);
     color: black;
 }
 
