adicionando as imagens dos cursos

--- a/css/modal.css
+++ b/css/modal.css
@@ -58,6 +58,9 @@
 }
 
 .card>.holdImg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 70%;
     color: black;
     border: 3px solid black;
